shell优化，提供gzip、zip命令