@@ -1,22 +1,22 @@
 package cc.whohow.fs.shell.provider;
 
-import cc.whohow.fs.*;
+import cc.whohow.fs.File;
+import cc.whohow.fs.FileManager;
+import cc.whohow.fs.UncheckedException;
+import cc.whohow.fs.VirtualFileSystem;
 import cc.whohow.fs.shell.Command;
 import cc.whohow.fs.shell.FileShell;
+import cc.whohow.fs.shell.provider.standard.*;
 import cc.whohow.fs.util.ComposeRunnable;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.io.IOException;
-import java.nio.file.DirectoryStream;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Map;
 import java.util.StringJoiner;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 public class VirtualFileShell implements FileShell {
     private static final Logger log = LogManager.getLogger(VirtualFileShell.class);
@@ -26,15 +26,16 @@ public class VirtualFileShell implements FileShell {
 
     public VirtualFileShell(VirtualFileSystem vfs) {
         this.vfs = vfs;
-        this.install("INSTALL", this::install);
-        this.install("FILE", this::file);
-        this.install("LIST", this::list);
-        this.install("TREE", this::tree);
-        this.install("COPY", this::copy);
-        this.install("MOVE", this::move);
-        this.install("DELETE", this::delete);
-        this.install("READ", this::read);
-        this.install("WRITE", this::write);
+        install("INSTALL", this::install);
+        install("FILE", new FileCommand());
+        install("DELETE", new DeleteCommand());
+        install("LIST", new ListCommand());
+        install("TREE", new TreeCommand());
+        install("STAT", new StatCommand());
+        install("READ", new ReadCommand());
+        install("WRITE", new WriteCommand());
+        install("COPY", new CopyCommand());
+        install("MOVE", new MoveCommand());
     }
 
     public synchronized void onClose(Runnable onClose) {
@@ -98,6 +99,7 @@ public class VirtualFileShell implements FileShell {
 
     @Override
     public synchronized void close() throws Exception {
+        log.debug("close VirtualFileShell: {}", this);
         if (onClose != null) {
             onClose.run();
             onClose = null;
@@ -119,8 +121,8 @@ public class VirtualFileShell implements FileShell {
 
     public <R> void install(Class<? extends Command<R>> commandType) {
         try {
-            install(commandType.newInstance());
-        } catch (InstantiationException | IllegalAccessException e) {
+            install(commandType.getDeclaredConstructor().newInstance());
+        } catch (Exception e) {
             throw UncheckedException.unchecked(e);
         }
     }
@@ -132,92 +134,6 @@ public class VirtualFileShell implements FileShell {
             buffer.add(className);
         }
         return buffer.toString();
-    }
-
-    protected File file(FileManager fileManager, String... args) {
-        if (args.length != 1) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        return fileManager.get(args[0]);
-    }
-
-    protected String list(FileManager fileManager, String... args) {
-        if (args.length != 1) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        File file = fileManager.get(args[0]);
-        try (DirectoryStream<? extends File> stream = file.newDirectoryStream()) {
-            StringJoiner buffer = new StringJoiner("\n");
-            for (File f : stream) {
-                buffer.add(f.getPublicUri());
-            }
-            return buffer.toString();
-        } catch (IOException e) {
-            throw UncheckedException.unchecked(e);
-        }
-    }
-
-    protected String tree(FileManager fileManager, String... args) {
-        if (args.length != 1) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        File file = fileManager.get(args[0]);
-        try (FileStream<? extends File> stream = file.tree()) {
-            StringJoiner buffer = new StringJoiner("\n");
-            for (File f : stream) {
-                buffer.add(f.getPublicUri());
-            }
-            return buffer.toString();
-        } catch (IOException e) {
-            throw UncheckedException.unchecked(e);
-        }
-    }
-
-    protected File copy(FileManager fileManager, String... args) {
-        if (args.length != 2) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        File source = fileManager.get(args[0]);
-        File target = fileManager.get(args[1]);
-        return fileManager.copyAsync(source, target).join();
-    }
-
-    protected File move(FileManager fileManager, String... args) {
-        if (args.length != 2) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        File source = fileManager.get(args[0]);
-        File target = fileManager.get(args[1]);
-        return fileManager.moveAsync(source, target).join();
-    }
-
-    protected String delete(FileManager fileManager, String... args) {
-        if (args.length != 2) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        return Arrays.stream(args)
-                .map(fileManager::get)
-                .peek(File::delete)
-                .map(File::getPublicUri)
-                .collect(Collectors.joining("\n"));
-    }
-
-    protected String read(FileManager fileManager, String... args) {
-        if (args.length != 1) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        File file = fileManager.get(args[0]);
-        return file.readUtf8();
-    }
-
-    protected String write(FileManager fileManager, String... args) {
-        if (args.length < 2) {
-            throw new IllegalArgumentException(String.join(" ", args));
-        }
-        File file = fileManager.get(args[0]);
-        String lines = String.join("\n", Arrays.asList(args).subList(1, args.length));
-        file.writeUtf8(lines);
-        return lines;
     }
 
     @Override
